<resources>
    <string name="app_name">EmbeddedShop</string>
</resources>
